# cmake-with-protobuf-example

./: CMakeLists.txt  README.md  main.cpp
proto/: CMakeLists.txt  test.proto
